<?xml version="1.0"?>
<package>
  <name>non-holonomic-prm-planner</name>
  <version>0.0.2</version>
  <description>Non Holonomic PRM planner</description>
  <maintainer email="skumar@monarchtractor.co">Shubham Kumar</maintainer>
  <license>BSD</license>
  <author email="skumar@monarchtractor.co">Shubham Kumar</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>autodrive_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>polygon_publisher</build_depend>
  <build_depend>poly_array_plugin</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>autodrive_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>polygon_publisher</run_depend>
  <run_depend>poly_array_plugin</run_depend>
  
  <export></export>
</package>
